daniel_dominguez/session03/exercise02/yaml/mariadb-deployment.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-frontend-allow
spec:
  podSelector:
    matchLabels:
      app: mariadb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress
    ports:
      - protocol: TCP
        port: 3306
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: mariadb
        - secretRef:
            name: mariadb
        name: mariadb
        image: bitnami/mariadb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
        volumeMounts:
        - mountPath: /bitnami/mariadb
          name: data
        - mountPath: /bitnami/mariadb/conf
          name: custom-cnf
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      volumes:
      - name: custom-cnf
        configMap:
          name: my-custom-cnf
      - name: data
        persistentVolumeClaim:
          claimName: mariadb
